# amazon-product-checkerr

./: README.md  chkr.py  pyproject.toml  url.txt  url_status_report.csv
